	reliable. (#include "config.h" in order to get all the #defines)

	The internals of gaim plugin events got modified slightly. It should
	have no effect on existing plugins or the way plugins are made. The
	change was to make my life easier adding perl. It should also make
	adding new plugin events even easier than before (though I doubt that
	any more will ever be added).

	event_buddy_away was being triggered every blist_update for every away
	buddy. This got fixed, but now when you sign on, event_buddy_away may
	be called before event_buddy_signon. Not that it should matter much.

	Just after I finish saying that no more events will be added, I go and
	add one. Go figure. Anyway, it's event_new_conversation. Enough people
	asked me to add it, and I found it useful enough, that I finally did
	add it. It gets passed a char *, the name of the person who the
	conversation is with. This gets triggered when a new conversation
	window is created, in case you couldn't figure it out on your own.

version 0.9.20:
	It's 3 am the night before finals, it's obviously a good time to hack
	gaim.

	This became quite long, and if you don't want to read it all, here's
	the important stuff summed up:
	- 9 new events (see SIGNALS file for more details)
	- int gaim_plugin_init(void *) (no longer returns void, see error.c)
	- void gaim_plugin_unload(void *) (to allow plugin to remove itself)
	- can only load 1 instance of the same plugin
	- PLUGIN_LIBS for extra libraries for plugin

	The first thing to note is that there are about 9 new events plugins
	can attach to, most of them dealing with chat, since I know that was a
	big thing that was missing. Please note that I was nice and decided to
	tack these extra events onto the end of the enum, which means that
	plugins do not have to be recompiled in order for them to still work.

	The big change is that gaim_plugin_init no longer returns void, but
	int.  If it returns 0+, gaim interprets this as there being no error,