@@ -1,0 +1,153 @@
+/* XPM */
+static char * tb_forward_xpm[] = {
+"24 24 126 2",
+"  	c None",
+". 	c #000000",
+"+ 	c #7B7B78",
+"@ 	c #C7C7C3",
+"# 	c #F1F0EB",
+"$ 	c #BFBFBC",
+"% 	c #5F5E5E",
+"& 	c #E3E3DF",
+"* 	c #F3F3EF",
+"= 	c #F2F2EE",
+"- 	c #F1F1EC",
+"; 	c #F0EFEB",
+"> 	c #D2D2CD",
+", 	c #969592",
+"' 	c #616060",
+") 	c #B5B5B4",
+"! 	c #F8F8F6",
+"~ 	c #F7F7F5",
+"{ 	c #F6F6F3",
+"] 	c #F5F5F2",
+"^ 	c #F4F4F0",
+"/ 	c #F2F1ED",
+"( 	c #F1F0EC",
+"_ 	c #F0EFEA",
+": 	c #EFEEE9",
+"< 	c #4F4F4D",
+"[ 	c #BDBCB8",
+"} 	c #A7A6A3",
+"| 	c #C6C6C4",
+"1 	c #7C7C7B",
+"2 	c #525251",
+"3 	c #DBDBD9",
+"4 	c #F5F4F1",
+"5 	c #F4F3F0",
+"6 	c #F3F2EE",
+"7 	c #999894",
+"8 	c #62625F",
+"9 	c #BCBCB6",
+"0 	c #EBE9E3",
+"a 	c #838381",
+"b 	c #D7D6D4",
+"c 	c #A8A8A6",
+"d 	c #515150",
+"e 	c #7E7D7C",
+"f 	c #DAD9D5",
+"g 	c #EFEEE8",
+"h 	c #EEEDE7",
+"i 	c #4F4E4C",
+"j 	c #BCBBB6",
+"k 	c #EBE9E2",
+"l 	c #EAE8E1",
+"m 	c #F6F5F2",
+"n 	c #F4F3EF",
+"o 	c #B5B4B1",
+"p 	c #9B9A97",
+"q 	c #646361",
+"r 	c #92918E",
+"s 	c #EEEDE8",
+"t 	c #EDECE6",
+"u 	c #4E4E4C",
+"v 	c #797976",
+"w 	c #797874",
+"x 	c #E9E8E1",
+"y 	c #E8E7DF",
+"z 	c #B4B3AF",
+"A 	c #D0D0CD",
+"B 	c #F2F2ED",
+"C 	c #BFBEBA",
+"D 	c #BEBDB9",
+"E 	c #7A7A77",
+"F 	c #979691",
+"G 	c #EAE9E2",
+"H 	c #959590",
+"I 	c #787773",
+"J 	c #B8B7B0",
+"K 	c #E6E4DC",
+"L 	c #A9A9A6",
+"M 	c #626260",
+"N 	c #ECEBE4",
+"O 	c #EBEAE3",
+"P 	c #E9E7E0",
+"Q 	c #E8E6DF",
+"R 	c #E7E5DD",
+"S 	c #777671",
+"T 	c #93918C",
+"U 	c #BEBDB8",
+"V 	c #989793",
+"W 	c #ECEAE4",
+"X 	c #E8E6DE",
+"Y 	c #E6E4DB",
+"Z 	c #E4E3DA",
+"` 	c #75746F",
+" .	c #91908A",
+"..	c #EEECE7",
+"+.	c #62615F",
+"@.	c #EBEAE4",
+"#.	c #E7E6DE",
+"$.	c #E6E5DC",
+"%.	c #E5E4DB",
+"&.	c #E4E2DA",
+"*.	c #CCCBC4",
+"=.	c #A3A29D",
+"-.	c #B6B5B2",
+";.	c #BCBCB7",
+">.	c #CDCCC6",
+",.	c #959490",
+"'.	c #ECEBE5",
+").	c #61615E",
+"!.	c #E9E8E0",
+"~.	c #CECDC7",
+"{.	c #797875",
+"].	c #969590",
+"^.	c #CFCEC8",
+"/.	c #AEADA8",
+"(.	c #585754",
+"_.	c #7B7A76",
+":.	c #B39C82",
+"<.	c #BCA488",
+"[.	c #746554",
+"}.	c #7D6D5B",
+"|.	c #867561",
+"1.	c #8F7D68",
+"2.	c #98856E",
+"3.	c #A18D75",
+"4.	c #AA947B",
+"5.	c #C5AC8F",
+"                                                ",
+"                                                ",
+"                          . . . .               ",
+"                . . . . . + @ # $ .             ",
+"      . . . . . % $ & * = - ; > , .             ",
+"    . ' ) ! ~ { ] ^ * / ( _ : < [ } .           ",
+"    . | 1 2 3 4 5 6 / # _ : 7 8 9 0 .           ",
+"    . a b c d e f / # _ g h i j k l .           ",
+"      . m 4 n o p q r s t u v w x y z .         ",
+"      . A * B ( ; C D E u F G H I J K .         ",
+"      . L / ( _ : M t N O l P Q R S T .         ",
+"        . # _ g U V W 0 l P X R Y Z `  ..       ",
+"        . ; g ..+.@.G x y #.$.%.&.*.=.. .       ",
+"        . -.t ;.F G x y #.K >.,.. . .           ",
+"          . '.).G !.Q ~.H . . .                 ",
+"          . {.].^./.. . .                       ",
+"          . (._.. .               . .           ",
+"            . .                   . :..         ",
+"                    . . . . . . . . :.<..       ",
+"                    . [.}.|.1.2.3.4.:.<.5..     ",
+"                    . [.}.|.1.2.3.4.:.<.5..     ",
+"                    . . . . . . . . :.<..       ",
+"                                  . :..         ",
+"                                  . .           "};
